test: TDD test code RED -> GREED develop